<resources>
    <string name="app_name">TickTacToe</string>
    <string name="menu">Menu</string>
    <string name="vs_friend_online">Versus Friend</string>
    <string name="vs_player">Versus Player</string>
    <string name="vs_computer">Versus Computer</string>
    <string name="win_records"> </string>
    <string name="enter_email">Enter your email</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="no_account_String">Don\'t have an account? click here to</string>
    <string name="already_having_account">Already have an account? click here to</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="reset_password">Reset Password</string>
    <string name="back_to_home">Back To Home</string>
    <string name="an_email_has_been_sent_to_you_containing_the_password_reset_link">An Email has been sent to you containing the password Reset Link.</string>
    <string name="sign_out">Sign Out</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="enter_other_player_name">Enter other player name</string>
    <string name="send_request">Send Request</string>
    <string name="incoming_request_from">Incoming request From</string>
    <string name="accept_invitation">Accept Invitation</string>
    <string name="button">buttons</string>
</resources>