<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id = "@+id/drawer_layout"
    android:layout_height="match_parent"
    android:theme="@style/Theme.TickTacToe.NoActionBar"
    android:baselineAligned="false"
    android:orientation="vertical"
    tools:context=".TheOption">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Theme.TickTacToe"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/menu"
            app:menu="@menu/menu_nav"
            app:titleTextColor="#FFFAFA" />
    <Button
        android:id="@+id/vFriendButton"
        android:layout_width="70pt"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="36dp"
        android:onClick="vsOnline"
        android:text="@string/vs_friend_online"
        app:backgroundTint="@color/menuButton"
        app:layout_constraintBottom_toTopOf="@+id/vComputerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <Button
        android:id="@+id/vPlayerButton"
        android:layout_width="70pt"
        android:layout_height="80dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        android:onClick="vsPlayer"
        android:text="@string/vs_player"
        app:backgroundTint="@color/menuButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vComputerButton"
        app:layout_constraintVertical_bias="1.0"
        />

    <Button
        android:id="@+id/vComputerButton"
        android:layout_width="70pt"
        android:layout_height="80dp"
        android:layout_marginStart="124dp"
        android:layout_marginLeft="124dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="124dp"
        android:layout_marginRight="124dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:onClick="vsComputer"
        android:text="@string/vs_computer"
        app:backgroundTint="@color/menuButton"
        app:layout_constraintBottom_toTopOf="@+id/vPlayerButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vFriendButton" />


</androidx.constraintlayout.widget.ConstraintLayout>