<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id= "@+id/table_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".OnlineGame">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:gravity="center">

            <Button
                android:id="@+id/onlineButton1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:contentDescription="@string/button"
                 
                android:onClick="buttonClicked"
                app:backgroundTint="@color/teal_200" />

            <Button
                android:id="@+id/onlineButton2"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:contentDescription="@string/back_to_home"
                 
                android:onClick="buttonClicked"
                app:backgroundTint="@color/teal_200" />

            <Button
                android:id="@+id/onlineButton3"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:contentDescription="@string/button"
                 
                android:onClick="buttonClicked"
                app:backgroundTint="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="center">

            <Button
                 
                android:id="@+id/onlineButton4"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:onClick="buttonClicked"
                android:contentDescription="@string/button"
                app:backgroundTint="@color/teal_200" />

            <Button
                 
                android:id="@+id/onlineButton5"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:contentDescription="@string/button"
                android:onClick="buttonClicked"
                app:backgroundTint="@color/teal_200" />

            <Button
                 
                android:id="@+id/onlineButton6"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:contentDescription="@string/button"
                android:layout_marginStart="5pt"
                android:onClick="buttonClicked"
                app:backgroundTint="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:gravity="center">

            <Button
                 
                android:id="@+id/onlineButton7"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:onClick="buttonClicked"
                android:contentDescription="@string/button"
                app:backgroundTint="@color/teal_200" />

            <Button
                 
                android:id="@+id/onlineButton8"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:onClick="buttonClicked"
                android:contentDescription="@string/button"
                app:backgroundTint="@color/teal_200" />

            <Button
                android:contentDescription="@string/button"
                 
                android:id="@+id/onlineButton9"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:layout_marginStart="5pt"
                android:onClick="buttonClicked"
                app:backgroundTint="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/win_records"
                android:layout_width="40pt"
                android:layout_height="40pt"
                android:gravity="center"
                android:text="@string/win_records" />
        </TableRow>

</TableLayout>